2002-06-12  Paul Eggert  <eggert@twinsun.com>

	* lib/autoconf/functions.m4 (_AC_LIBOBJ_FNMATCH): Also check for
	btowc, to fix a portability bug with diffutils-2.8.2/lib/fnmatch.c
	on Solaris 2.5.1.

2002-06-11  Andreas Schwab  <schwab@suse.de>

	* doc/autoconf.texi: Add more dir entries.

2002-06-10  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* bin/autom4te.in ($cache): Don't define using `$me', the name
	of the cache should not depend on the name under which autom4te
	was installed.

2002-06-07  Akim Demaille  <akim@epita.fr>

	* tests/tools.at (autoconf: forbidden tokens, basic)
	(autoconf: forbidden tokens, exceptions): Adjust to the change of
	words in autom4te.in.

2002-06-07  Peter Eisentraut  <peter_e@gmx.net>

	* lib/autoconf/c.m4 (AC_LANG_PROGRAM(C)): Use
	_AC_LANG_PROGRAM_C_F77_HOOKS.

2002-06-07  Akim Demaille  <akim@epita.fr>

	* lib/autoconf/functions.m4 (AC_REPLACE_FUNC_FNMATCH): Typo,
	rename as...
	(AC_REPLACE_FNMATCH): this.
	* tests/mktests.sh (exclude_list): Exclude AC_REPLACE_FNMATCH,
	AC_FUNC_FNMATCH_GNU.

2002-06-07  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi (Systemology): Point to Tru64 docs, and the
	Rosetta Stone for Unix.

2002-06-07  Akim Demaille  <akim@epita.fr>

	* bin/autom4te.in (warn_forbidden): When rejecting a token,
	suggest m4_pattern_allow.
	Suggested by Adam J. Richter.

2002-06-07  Akim Demaille  <akim@epita.fr>

	* lib/autoconf/general.m4 (_AC_INIT_DEFAULTS): Initialize
	ac_config_libobj_dir.
	(AC_CONFIG_LIBOBJ_DIR): New.
	* lib/autoconf/functions.m4 (_AC_FUNC_FNMATCH): Split into...
	(_AC_FUNC_FNMATCH_IF, _AC_LIBOBJ_FNMATCH): these.
	Use ac_config_libobj_dir to find the replacement files.
	(AC_FUNC_FNMATCH, AC_FUNC_FNMATCH_GNU): Split into...
	(AC_FUNC_FNMATCH, AC_FUNC_FNMATCH_GNU, AC_REPLACE_FNMATCH)
	(AC_REPLACE_FNMATCH_GNU): these.
	(AC_FUNC_GETLOADAVG): Use ac_config_libobj_dir.
	* doc/autoconf.texi (Particular Functions, Generic Functions): Adjust.
	* tests/mktests.sh (ac_exclude_list): Don't check